structural rules discussion added to §31

--- a/forallx-adl-prooffol.tex
+++ b/forallx-adl-prooffol.tex
@@ -1001,6 +1001,8 @@ Burgess philosophical logic
 
 RELEVANCE
 
+substructural §\ref{s:substructural}
+
 BEall and van fraassen
 
 priest non classical
